--- a/style.css
+++ b/style.css
@@ -37,6 +37,26 @@
   animation: clouds-animation 20s infinite linear;
 }
 
+button{
+  background: green;
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  border: none;
+  padding: 1rem;
+  position: absolute;
+  right: 50vw;
+  top: 50vh;
+  cursor: pointer;
+  z-index: 1;
+}
+
+button:hover{
+  border: 2px solid green;
+  background: none;
+  color: green;
+}
+
 @keyframes pipe-animation{
   from {right: -80px;}
   to {right: 100%;}
