--- a/style.css
+++ b/style.css
@@ -62,6 +62,23 @@ button:hover{
   color: green;
 }
 
+button.start{
+  display: block;
+}
+
+.game-over{
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 @keyframes pipe-animation{
   from {right: -80px;}
   to {right: 100%;}
