--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 .pipe, mario, .nuvem{
   opacity: 0;
-  transition: opacity 0.5s ease-in-out
+  transition: opacity 0.5s ease-in-out;
 }
 
 .pipe {
